package net.tangly.dev.model;

public class Clazz {
    String name;
}
