package net.tangly.dev.model;

public class Committer {
    private String name;
}
