package net.tangly.dev.model;

import java.util.List;

public class Module {
    String name;
    private List<Package> packages;
}
