package net.tangly.dev.model;

import java.util.List;

public class Package {
    String name;
    private List<Clazz> classed;
}
