package net.tangly.dev.model;

public class RepositoryFile {
    private String name;
}
