@startuml

class Commit {
  String comment
}

Class CommitItem
class Committer {
  String name
}

class RepositoryFile {
  String filename
  boolean test
}

class Project {
  String name
}

class Module {
  String qualifiedName
}

class Package {
  String qualifiedName
}

class Clazz {
  String qualifiedName
}

Commit *-- CommitItem
Commit o-- Committer
CommitItem o-- RepositoryFile

Project o-- Module
Module *-- Package
Package *-- Clazz
Clazz o-- RepositoryFile

Project *-- Committer
Project *-- Commit

@enduml